small fix overflow-x

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ body{
     height: 100%;
     width: 100%;
     font-family: 'Raleway', sans-serif;
+    overflow-x: hidden;
 }
 h1{
     font-size: 4em;
